--- a/po/main/he.po
+++ b/po/main/he.po
@@ -107,8 +107,7 @@ msgstr "נכשל בהתחלת ממשק רשת: "
 msgid "SABnzbd %s started"
 msgstr "התחיל SABnzbd %s"
 
-#. Notification
-#. Status page, table column header, actual message
+#. Notification - Status page, table column header, actual message
 #: SABnzbd.py, sabnzbd/notifier.py, sabnzbd/skintext.py
 msgid "Warning"
 msgstr "אזהרה"
@@ -173,8 +172,7 @@ msgstr "בחן התראה"
 msgid "&nbsp;Resolving address"
 msgstr "&nbsp;פותר כתובת"
 
-#. No value, used in dropdown menus
-#. Job details page, select no files
+#. No value, used in dropdown menus - Job details page, select no files
 #: sabnzbd/api.py, sabnzbd/skintext.py
 msgid "None"
 msgstr "אין"
@@ -392,8 +390,7 @@ msgstr "%s שגיאה בלתי ידועה בעת פענוח"
 msgid "Direct Unpack"
 msgstr "פריקה ישירה"
 
-#. PP status
-#. History: job status
+#. PP status - History: job status
 #: sabnzbd/directunpacker.py, sabnzbd/skintext.py
 msgid "Completed"
 msgstr "הושלם"
@@ -424,8 +421,7 @@ msgstr "%s לא ניתן לקרוא את התיקייה המושגחת"
 msgid "Resuming"
 msgstr "ממשיך"
 
-#. PP status
-#. Priority pick list
+#. PP status - Priority pick list
 #: sabnzbd/downloader.py, sabnzbd/osxmenu.py, sabnzbd/sabtray.py,
 #: sabnzbd/sabtraylinux.py, sabnzbd/skintext.py
 msgid "Paused"
@@ -529,8 +525,7 @@ msgstr "%s-לא ניתן למצוא תבניות דוא״ל ב"
 msgid "No recipients given, no email sent"
 msgstr "נמענים לא ניתנו, דוא״ל לא נשלח"
 
-#. Error message
-#. Warning message
+#. Error message - Warning message
 #: sabnzbd/emailer.py, sabnzbd/filesystem.py, sabnzbd/nzbparser.py,
 #: sabnzbd/rss.py
 msgid "Cannot read %s"
@@ -750,8 +745,7 @@ msgstr "מריץ תסריט"
 msgid "PostProcessing was aborted (%s)"
 msgstr "(%s) בתר־עיבוד בוטל"
 
-#. PP phase "script"
-#. Notification Script settings
+#. PP phase "script" - Notification Script settings
 #: sabnzbd/newsunpack.py, sabnzbd/skintext.py
 msgid "Script"
 msgstr "תסריט"
@@ -1039,8 +1033,7 @@ msgstr "וויקי"
 msgid "Startup/Shutdown"
 msgstr "הזנק/כיבוי"
 
-#. Notification
-#. Config->RSS after adding to queue
+#. Notification - Config->RSS after adding to queue
 #: sabnzbd/notifier.py, sabnzbd/skintext.py
 msgid "Added NZB"
 msgstr "התווסף NZB"
@@ -1087,8 +1080,7 @@ msgstr "Prowl נכשל בשליחת הודעת"
 msgid "Bad response from Pushover (%s): %s"
 msgstr "Pushover (%s): %s תגובה רעה מאת"
 
-#. Error message
-#. Warning message
+#. Error message - Warning message
 #: sabnzbd/notifier.py
 msgid "Failed to send pushover message"
 msgstr "pushover נכשל בשליחת הודעת"
@@ -1292,9 +1284,7 @@ msgstr "טהר היסטוריה"
 msgid "Limit Speed"
 msgstr "הגבל מהירות"
 
-#. Pause downloading
-#. Four way switch for duplicates
-#. Config->Scheduling
+#. Pause downloading - Four way switch for duplicates - Config->Scheduling
 #: sabnzbd/osxmenu.py, sabnzbd/sabtray.py, sabnzbd/sabtraylinux.py,
 #: sabnzbd/skintext.py
 msgid "Pause"
@@ -1304,8 +1294,7 @@ msgstr "השהה"
 msgid "min."
 msgstr "דקות"
 
-#. Resume downloading
-#. Config->Scheduling
+#. Resume downloading - Config->Scheduling
 #: sabnzbd/osxmenu.py, sabnzbd/sabtray.py, sabnzbd/sabtraylinux.py,
 #: sabnzbd/skintext.py
 msgid "Resume"
@@ -1725,8 +1714,7 @@ msgstr "השהה למשך 3 שעות"
 msgid "Pause for 6 hours"
 msgstr "השהה למשך 6 שעות"
 
-#. Shutdown SABnzbd
-#. Config->Scheduling
+#. Shutdown SABnzbd - Config->Scheduling
 #: sabnzbd/sabtray.py, sabnzbd/sabtraylinux.py, sabnzbd/skintext.py
 msgid "Shutdown"
 msgstr "כבה"
@@ -1754,9 +1742,8 @@ msgstr "פעולה בלתי ידועה: %s"
 msgid "Schedule for non-existing server %s"
 msgstr "%s תזמן עבור שרת בלתי קיים"
 
-#. Queue status "download"
-#. Post processing pick list
-#. Config->RSS button "download item"
+#. Queue status "download" - Post processing pick list - Config->RSS button
+#. "download item"
 #: sabnzbd/skintext.py
 msgid "Download"
 msgstr "הורדה"
@@ -1766,14 +1753,12 @@ msgstr "הורדה"
 msgid "Join files"
 msgstr "אחד קבצים"
 
-#. PP Source of the NZB (path or URL)
-#. Where to find the SABnzbd sourcecode
+#. PP Source of the NZB (path or URL) - Where to find the SABnzbd sourcecode
 #: sabnzbd/skintext.py
 msgid "Source"
 msgstr "מקור"
 
-#. PP Distribution over servers
-#. Main menu item
+#. PP Distribution over servers - Main menu item
 #: sabnzbd/skintext.py
 msgid "Servers"
 msgstr "שרתים"
@@ -1937,8 +1922,7 @@ msgstr "השהה עבודות עם קטגוריה"
 msgid "Resume jobs with category"
 msgstr "המשך עבודות עם קטגוריה"
 
-#. Prowl priority
-#. Three way switch for duplicates
+#. Prowl priority - Three way switch for duplicates
 #: sabnzbd/skintext.py
 msgid "Off"
 msgstr "כבוי"
@@ -1953,14 +1937,12 @@ msgstr "נמוכה מאוד"
 msgid "Moderate"
 msgstr "בינונית"
 
-#. Prowl priority
-#. Priority pick list
+#. Prowl priority - Priority pick list
 #: sabnzbd/skintext.py
 msgid "Normal"
 msgstr "רגילה"
 
-#. Prowl priority
-#. Priority pick list
+#. Prowl priority - Priority pick list
 #: sabnzbd/skintext.py
 msgid "High"
 msgstr "גבוהה"
@@ -1970,8 +1952,7 @@ msgstr "גבוהה"
 msgid "Emergency"
 msgstr "חירום"
 
-#. Prowl priority
-#. Priority pick list
+#. Prowl priority - Priority pick list
 #: sabnzbd/skintext.py
 msgid "Low"
 msgstr "נמוכה"
@@ -2108,8 +2089,7 @@ msgstr "סה״כ"
 msgid "on"
 msgstr "פועל"
 
-#. Config: startup parameters of SABnzbd
-#. Notification Script settings
+#. Config: startup parameters of SABnzbd - Notification Script settings
 #: sabnzbd/skintext.py
 msgid "Parameters"
 msgstr "פרמטרים"
@@ -2215,8 +2195,7 @@ msgstr "בית"
 msgid "Config"
 msgstr "תצר את"
 
-#. Main menu item
-#. History table header
+#. Main menu item - History table header
 #: sabnzbd/skintext.py
 msgid "Status"
 msgstr "מעמד"
@@ -2325,8 +2304,7 @@ msgstr "שחרור חדש %s זמין ב"
 msgid "Are you sure you want to shutdown SABnzbd?"
 msgstr "?SABnzbd האם אתה בטוח שאתה רוצה לכבות את"
 
-#. Add NZB to queue (button)
-#. Add NZB to queue (header)
+#. Add NZB to queue (button) - Add NZB to queue (header)
 #: sabnzbd/skintext.py
 msgid "Add"
 msgstr "הוסף"
@@ -2426,14 +2404,12 @@ msgstr "SABnzbd כבה את"
 msgid "Speed Limit"
 msgstr "מגבלת מהירות"
 
-#. Queue page table column header
-#. Config->RSS table column header
+#. Queue page table column header - Config->RSS table column header
 #: sabnzbd/skintext.py
 msgid "Order"
 msgstr "סידור"
 
-#. Queue page table column header
-#. Job details page
+#. Queue page table column header - Job details page
 #: sabnzbd/skintext.py
 msgid "Name"
 msgstr "שם"
@@ -2547,8 +2523,7 @@ msgstr "הראה נכשלים"
 msgid "Show All"
 msgstr "הראה הכל"
 
-#. History table header
-#. Size of the download quota
+#. History table header - Size of the download quota
 #: sabnzbd/skintext.py
 msgid "Size"
 msgstr "גודל"
@@ -2651,8 +2626,7 @@ msgstr "+ מידע"
 msgid "+ Debug"
 msgstr "+ ניפוי תקלים"
 
-#. Status page tab header
-#. Server: amount of connections
+#. Status page tab header - Server: amount of connections
 #: sabnzbd/skintext.py
 msgid "Connections"
 msgstr "חיבורים"
@@ -2687,8 +2661,8 @@ msgstr "ערכת קבצים"
 msgid "When"
 msgstr "מתי"
 
-#. Status page, table column header, type of message
-#. Config->RSS table column header
+#. Status page, table column header, type of message - Config->RSS table
+#. column header
 #: sabnzbd/skintext.py
 msgid "Type"
 msgstr "סוג"
@@ -3775,8 +3749,7 @@ msgstr "IPv6 הזריזה ביותר, העדפה אל IP כתובת"
 msgid "Useful if a newsserver has more than one IPv4/IPv6 address"
 msgstr "אחת IPv4/IPv6 שימושי אם לשרת חדשות יש יותר מכתובת"
 
-#. Caption
-#. Button: Add server
+#. Caption - Button: Add server
 #: sabnzbd/skintext.py
 msgid "Add Server"
 msgstr "הוסף שרת"
@@ -3869,8 +3842,7 @@ msgstr "אפשר"
 msgid "Remove Server"
 msgstr "הסר שרת"
 
-#. Button: Test server
-#. Wizard step
+#. Button: Test server - Wizard step
 #: sabnzbd/skintext.py
 msgid "Test Server"
 msgstr "בחן שרת"
@@ -3910,8 +3882,7 @@ msgstr "הוסף תזמון"
 msgid "Frequency"
 msgstr "תדירות"
 
-#. Config->Scheduling
-#. Job details page, section header
+#. Config->Scheduling - Job details page, section header
 #: sabnzbd/skintext.py
 msgid "Action"
 msgstr "פעולה"
