--- a/po/main/ro.po
+++ b/po/main/ro.po
@@ -108,8 +108,7 @@ msgstr "Nu am putu porni interfața web: "
 msgid "SABnzbd %s started"
 msgstr "SABnzbd %s pornit"
 
-#. Notification
-#. Status page, table column header, actual message
+#. Notification - Status page, table column header, actual message
 #: SABnzbd.py, sabnzbd/notifier.py, sabnzbd/skintext.py
 msgid "Warning"
 msgstr "Avertisment"
@@ -174,8 +173,7 @@ msgstr "Notificări Test"
 msgid "&nbsp;Resolving address"
 msgstr "&nbsp;Reolvare adresă"
 
-#. No value, used in dropdown menus
-#. Job details page, select no files
+#. No value, used in dropdown menus - Job details page, select no files
 #: sabnzbd/api.py, sabnzbd/skintext.py
 msgid "None"
 msgstr "Niciunul"
@@ -392,8 +390,7 @@ msgstr "Eroare Necunoscută în timpul decodării %s"
 msgid "Direct Unpack"
 msgstr ""
 
-#. PP status
-#. History: job status
+#. PP status - History: job status
 #: sabnzbd/directunpacker.py, sabnzbd/skintext.py
 msgid "Completed"
 msgstr "Finalizat"
@@ -422,8 +419,7 @@ msgstr "Nu pot citi Dosar Urnărire %s"
 msgid "Resuming"
 msgstr "Reluare"
 
-#. PP status
-#. Priority pick list
+#. PP status - Priority pick list
 #: sabnzbd/downloader.py, sabnzbd/osxmenu.py, sabnzbd/sabtray.py,
 #: sabnzbd/sabtraylinux.py, sabnzbd/skintext.py
 msgid "Paused"
@@ -529,8 +525,7 @@ msgstr "Nu pot gasi şabloane email în %s"
 msgid "No recipients given, no email sent"
 msgstr "Destinatar necunoscut, niciun email trimis"
 
-#. Error message
-#. Warning message
+#. Error message - Warning message
 #: sabnzbd/emailer.py, sabnzbd/filesystem.py, sabnzbd/nzbparser.py,
 #: sabnzbd/rss.py
 msgid "Cannot read %s"
@@ -750,8 +745,7 @@ msgstr "Rulare script"
 msgid "PostProcessing was aborted (%s)"
 msgstr "Post-Procesarea a fost abandonată (%s)"
 
-#. PP phase "script"
-#. Notification Script settings
+#. PP phase "script" - Notification Script settings
 #: sabnzbd/newsunpack.py, sabnzbd/skintext.py
 msgid "Script"
 msgstr "Script"
@@ -1039,8 +1033,7 @@ msgstr "Wiki"
 msgid "Startup/Shutdown"
 msgstr "Pornire/Închidere"
 
-#. Notification
-#. Config->RSS after adding to queue
+#. Notification - Config->RSS after adding to queue
 #: sabnzbd/notifier.py, sabnzbd/skintext.py
 msgid "Added NZB"
 msgstr "NZB-uri Adăugate"
@@ -1087,8 +1080,7 @@ msgstr "Nu am putu trimite mesajul Prowl"
 msgid "Bad response from Pushover (%s): %s"
 msgstr "Răspuns greșit de la Pushover (%s): %s"
 
-#. Error message
-#. Warning message
+#. Error message - Warning message
 #: sabnzbd/notifier.py
 msgid "Failed to send pushover message"
 msgstr "Nu am putut trimite mesajul de pushover"
@@ -1292,9 +1284,7 @@ msgstr "Şterge Istoricul"
 msgid "Limit Speed"
 msgstr "Limitare de Viteză"
 
-#. Pause downloading
-#. Four way switch for duplicates
-#. Config->Scheduling
+#. Pause downloading - Four way switch for duplicates - Config->Scheduling
 #: sabnzbd/osxmenu.py, sabnzbd/sabtray.py, sabnzbd/sabtraylinux.py,
 #: sabnzbd/skintext.py
 msgid "Pause"
@@ -1304,8 +1294,7 @@ msgstr "Pauză"
 msgid "min."
 msgstr "min."
 
-#. Resume downloading
-#. Config->Scheduling
+#. Resume downloading - Config->Scheduling
 #: sabnzbd/osxmenu.py, sabnzbd/sabtray.py, sabnzbd/sabtraylinux.py,
 #: sabnzbd/skintext.py
 msgid "Resume"
@@ -1725,8 +1714,7 @@ msgstr "Pauză timp de 3 ore"
 msgid "Pause for 6 hours"
 msgstr "Pauză timp de 6 ore"
 
-#. Shutdown SABnzbd
-#. Config->Scheduling
+#. Shutdown SABnzbd - Config->Scheduling
 #: sabnzbd/sabtray.py, sabnzbd/sabtraylinux.py, sabnzbd/skintext.py
 msgid "Shutdown"
 msgstr "Închidere"
@@ -1754,9 +1742,8 @@ msgstr "Acţiune necunoscută: %s"
 msgid "Schedule for non-existing server %s"
 msgstr "Planificare pentru un server inexistent %s"
 
-#. Queue status "download"
-#. Post processing pick list
-#. Config->RSS button "download item"
+#. Queue status "download" - Post processing pick list - Config->RSS button
+#. "download item"
 #: sabnzbd/skintext.py
 msgid "Download"
 msgstr "Descarcă"
@@ -1766,14 +1753,12 @@ msgstr "Descarcă"
 msgid "Join files"
 msgstr "Uneşte fişierele"
 
-#. PP Source of the NZB (path or URL)
-#. Where to find the SABnzbd sourcecode
+#. PP Source of the NZB (path or URL) - Where to find the SABnzbd sourcecode
 #: sabnzbd/skintext.py
 msgid "Source"
 msgstr "Sursă"
 
-#. PP Distribution over servers
-#. Main menu item
+#. PP Distribution over servers - Main menu item
 #: sabnzbd/skintext.py
 msgid "Servers"
 msgstr "Servere"
@@ -1937,8 +1922,7 @@ msgstr ""
 msgid "Resume jobs with category"
 msgstr ""
 
-#. Prowl priority
-#. Three way switch for duplicates
+#. Prowl priority - Three way switch for duplicates
 #: sabnzbd/skintext.py
 msgid "Off"
 msgstr "Oprit"
@@ -1953,14 +1937,12 @@ msgstr "Foarte scăzută"
 msgid "Moderate"
 msgstr "Moderat"
 
-#. Prowl priority
-#. Priority pick list
+#. Prowl priority - Priority pick list
 #: sabnzbd/skintext.py
 msgid "Normal"
 msgstr "Normal"
 
-#. Prowl priority
-#. Priority pick list
+#. Prowl priority - Priority pick list
 #: sabnzbd/skintext.py
 msgid "High"
 msgstr "Ridicată"
@@ -1970,8 +1952,7 @@ msgstr "Ridicată"
 msgid "Emergency"
 msgstr "Urgență"
 
-#. Prowl priority
-#. Priority pick list
+#. Prowl priority - Priority pick list
 #: sabnzbd/skintext.py
 msgid "Low"
 msgstr "Scăzută"
@@ -2108,8 +2089,7 @@ msgstr "Total"
 msgid "on"
 msgstr "activat"
 
-#. Config: startup parameters of SABnzbd
-#. Notification Script settings
+#. Config: startup parameters of SABnzbd - Notification Script settings
 #: sabnzbd/skintext.py
 msgid "Parameters"
 msgstr "Parametrii"
@@ -2215,8 +2195,7 @@ msgstr "Pagina de pornire"
 msgid "Config"
 msgstr "Configurare"
 
-#. Main menu item
-#. History table header
+#. Main menu item - History table header
 #: sabnzbd/skintext.py
 msgid "Status"
 msgstr "Stare"
@@ -2325,8 +2304,7 @@ msgstr "Versiune nouă %s disponibilă la"
 msgid "Are you sure you want to shutdown SABnzbd?"
 msgstr "Sunteţi sigur că doriţi să inchideţi SABnzbd?"
 
-#. Add NZB to queue (button)
-#. Add NZB to queue (header)
+#. Add NZB to queue (button) - Add NZB to queue (header)
 #: sabnzbd/skintext.py
 msgid "Add"
 msgstr "Adaugă"
@@ -2426,14 +2404,12 @@ msgstr "Închide SABnzbd"
 msgid "Speed Limit"
 msgstr "Limită de Viteză"
 
-#. Queue page table column header
-#. Config->RSS table column header
+#. Queue page table column header - Config->RSS table column header
 #: sabnzbd/skintext.py
 msgid "Order"
 msgstr "Ordine"
 
-#. Queue page table column header
-#. Job details page
+#. Queue page table column header - Job details page
 #: sabnzbd/skintext.py
 msgid "Name"
 msgstr "Nume"
@@ -2547,8 +2523,7 @@ msgstr "Arată Nereuşite"
 msgid "Show All"
 msgstr "Arată toate"
 
-#. History table header
-#. Size of the download quota
+#. History table header - Size of the download quota
 #: sabnzbd/skintext.py
 msgid "Size"
 msgstr "Mărime"
@@ -2649,8 +2624,7 @@ msgstr "+ Info"
 msgid "+ Debug"
 msgstr "+ Depanare"
 
-#. Status page tab header
-#. Server: amount of connections
+#. Status page tab header - Server: amount of connections
 #: sabnzbd/skintext.py
 msgid "Connections"
 msgstr "Conexiuni"
@@ -2685,8 +2659,8 @@ msgstr "Set fişiere"
 msgid "When"
 msgstr "Când"
 
-#. Status page, table column header, type of message
-#. Config->RSS table column header
+#. Status page, table column header, type of message - Config->RSS table
+#. column header
 #: sabnzbd/skintext.py
 msgid "Type"
 msgstr "Tip"
@@ -3779,8 +3753,7 @@ msgstr ""
 msgid "Useful if a newsserver has more than one IPv4/IPv6 address"
 msgstr "Util dacă un server de știri are mai mult decât o adresă IPv4/IPv6"
 
-#. Caption
-#. Button: Add server
+#. Caption - Button: Add server
 #: sabnzbd/skintext.py
 msgid "Add Server"
 msgstr "Adaugă Server"
@@ -3872,8 +3845,7 @@ msgstr "Activează"
 msgid "Remove Server"
 msgstr "Şterge Server"
 
-#. Button: Test server
-#. Wizard step
+#. Button: Test server - Wizard step
 #: sabnzbd/skintext.py
 msgid "Test Server"
 msgstr "Test Server"
@@ -3913,8 +3885,7 @@ msgstr "Adaugă Planificare"
 msgid "Frequency"
 msgstr "Frecvenţă"
 
-#. Config->Scheduling
-#. Job details page, section header
+#. Config->Scheduling - Job details page, section header
 #: sabnzbd/skintext.py
 msgid "Action"
 msgstr "Acțiune"
