--- a/po/email/nl.po
+++ b/po/email/nl.po
@@ -1,21 +1,21 @@
-# Dutch translation for sabnzbd
-# Copyright (c) 2011 Rosetta Contributors and Canonical Ltd 2011
-# This file is distributed under the same license as the sabnzbd package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2011.
-#
+# SABnzbd Translation Template file EMAIL
+# Copyright 2011-2020 The SABnzbd-Team
+#   team@sabnzbd.org
+# 
+# Translators:
+# Safihre <safihre@sabnzbd.org>, 2020
+# 
 msgid ""
 msgstr ""
-"Project-Id-Version: sabnzbd\n"
-"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2020-04-28 21:31+0000\n"
-"PO-Revision-Date: 2013-05-05 14:50+0000\n"
-"Last-Translator: shypike <Unknown>\n"
-"Language-Team: Dutch <nl@li.org>\n"
+"Project-Id-Version: SABnzbd-3.0.0-develop\n"
+"PO-Revision-Date: 2020-06-27 15:56+0000\n"
+"Last-Translator: Safihre <safihre@sabnzbd.org>, 2020\n"
+"Language-Team: Dutch (https://www.transifex.com/sabnzbd/teams/111101/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2020-04-29 06:36+0000\n"
-"X-Generator: Launchpad (build d1105341713c5be348effe2a5142c4a210ce4cde)\n"
+"Language: nl\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: email/email.tmpl:1
 msgid ""
@@ -30,19 +30,16 @@ msgid ""
 "To: $to\n"
 "From: $from\n"
 "Date: $date\n"
-"Subject: SABnzbd has <!--#if $status then \"completed\" else \"failed\" #--> "
-"job $name\n"
+"Subject: SABnzbd has <!--#if $status then \"completed\" else \"failed\" #--> job $name\n"
 "X-priority: 5\n"
 "X-MS-priority: 5\n"
 "## After this comes the body, the empty line is required!\n"
 "\n"
 "Hi,\n"
 "<!--#if $status #-->\n"
-"SABnzbd has downloaded \"$name\" <!--#if $msgid==\"\" then \"\" else "
-"\"(newzbin #\" + $msgid + \")\"#-->\n"
+"SABnzbd has downloaded \"$name\" <!--#if $msgid==\"\" then \"\" else \"(newzbin #\" + $msgid + \")\"#-->\n"
 "<!--#else#-->\n"
-"SABnzbd has failed to download \"$name\" <!--#if $msgid==\"\" then \"\" else "
-"\"(newzbin #\" + $msgid + \")\"#-->\n"
+"SABnzbd has failed to download \"$name\" <!--#if $msgid==\"\" then \"\" else \"(newzbin #\" + $msgid + \")\"#-->\n"
 "<!--#end if#-->\n"
 "Finished at $end_time\n"
 "Downloaded $size\n"
@@ -75,19 +72,16 @@ msgstr ""
 "To: $to\n"
 "From: $from\n"
 "Date: $date\n"
-"Subject: SABnzbd: opdracht $name is <!--#if $status then \"klaar\" else "
-"\"mislukt\" #-->\n"
+"Subject: SABnzbd: opdracht $name is <!--#if $status then \"klaar\" else \"mislukt\" #-->\n"
 "X-priority: 5\n"
 "X-MS-priority: 5\n"
 "## Hier onder volgt de hoofdtekst, de lege regel is noodzakelijk!\n"
 "\n"
 "Hallo,\n"
 "<!--#if $status #-->\n"
-"SABnzbd heeft \"$name\" <!--#if $msgid==\"\" then \"\" else \"(newzbin #\" + "
-"$msgid + \")\"#--> gedownload\n"
+"SABnzbd heeft \"$name\" <!--#if $msgid==\"\" then \"\" else \"(newzbin #\" + $msgid + \")\"#--> gedownload\n"
 "<!--#else#-->\n"
-"SABnzbd is niet geslaagd in het downloaden van \"$name\" <!--#if "
-"$msgid==\"\" then \"\" else \"(newzbin #\" + $msgid + \")\"#-->\n"
+"SABnzbd is niet geslaagd in het downloaden van \"$name\" <!--#if $msgid==\"\" then \"\" else \"(newzbin #\" + $msgid + \")\"#-->\n"
 "<!--#end if#-->\n"
 "Klaar om $end_time\n"
 "Hoeveelheid gedownload $size\n"
