--- a/po/main/da.po
+++ b/po/main/da.po
@@ -111,8 +111,7 @@ msgstr "Kunne ikke starte web-grænseflade: "
 msgid "SABnzbd %s started"
 msgstr "SABnzbd %s startet"
 
-#. Notification
-#. Status page, table column header, actual message
+#. Notification - Status page, table column header, actual message
 #: SABnzbd.py, sabnzbd/notifier.py, sabnzbd/skintext.py
 msgid "Warning"
 msgstr "Advarsel"
@@ -177,8 +176,7 @@ msgstr "Afprøv notifikation"
 msgid "&nbsp;Resolving address"
 msgstr "&nbsp; Server løsning"
 
-#. No value, used in dropdown menus
-#. Job details page, select no files
+#. No value, used in dropdown menus - Job details page, select no files
 #: sabnzbd/api.py, sabnzbd/skintext.py
 msgid "None"
 msgstr "Ingen"
@@ -396,8 +394,7 @@ msgstr "Ukendt fejl under afkodning af %s"
 msgid "Direct Unpack"
 msgstr ""
 
-#. PP status
-#. History: job status
+#. PP status - History: job status
 #: sabnzbd/directunpacker.py, sabnzbd/skintext.py
 msgid "Completed"
 msgstr "Færdig"
@@ -426,8 +423,7 @@ msgstr "Kan ikke læse overvåget mappe %s"
 msgid "Resuming"
 msgstr "Genoptager"
 
-#. PP status
-#. Priority pick list
+#. PP status - Priority pick list
 #: sabnzbd/downloader.py, sabnzbd/osxmenu.py, sabnzbd/sabtray.py,
 #: sabnzbd/sabtraylinux.py, sabnzbd/skintext.py
 msgid "Paused"
@@ -533,8 +529,7 @@ msgstr "Kan ikke finde e-mail skabeloner i %s"
 msgid "No recipients given, no email sent"
 msgstr "Ingen modtagere givet, ingen e-mail sendt"
 
-#. Error message
-#. Warning message
+#. Error message - Warning message
 #: sabnzbd/emailer.py, sabnzbd/filesystem.py, sabnzbd/nzbparser.py,
 #: sabnzbd/rss.py
 msgid "Cannot read %s"
@@ -754,8 +749,7 @@ msgstr "Køre script"
 msgid "PostProcessing was aborted (%s)"
 msgstr "Efterbehandling blev afbrudt (%s)"
 
-#. PP phase "script"
-#. Notification Script settings
+#. PP phase "script" - Notification Script settings
 #: sabnzbd/newsunpack.py, sabnzbd/skintext.py
 msgid "Script"
 msgstr "Script"
@@ -1045,8 +1039,7 @@ msgstr "Wiki"
 msgid "Startup/Shutdown"
 msgstr "Start/lukning"
 
-#. Notification
-#. Config->RSS after adding to queue
+#. Notification - Config->RSS after adding to queue
 #: sabnzbd/notifier.py, sabnzbd/skintext.py
 msgid "Added NZB"
 msgstr "Tilføjet NZB"
@@ -1093,8 +1086,7 @@ msgstr "Kunne ikke sende Prowl besked"
 msgid "Bad response from Pushover (%s): %s"
 msgstr "Dårlig respons fra pushover (%s): %s"
 
-#. Error message
-#. Warning message
+#. Error message - Warning message
 #: sabnzbd/notifier.py
 msgid "Failed to send pushover message"
 msgstr "Det lykkedes ikke at sende pushover besked"
@@ -1298,9 +1290,7 @@ msgstr "Tøm historik"
 msgid "Limit Speed"
 msgstr "Hastighedsbegrænsning"
 
-#. Pause downloading
-#. Four way switch for duplicates
-#. Config->Scheduling
+#. Pause downloading - Four way switch for duplicates - Config->Scheduling
 #: sabnzbd/osxmenu.py, sabnzbd/sabtray.py, sabnzbd/sabtraylinux.py,
 #: sabnzbd/skintext.py
 msgid "Pause"
@@ -1310,8 +1300,7 @@ msgstr "Pause"
 msgid "min."
 msgstr "min."
 
-#. Resume downloading
-#. Config->Scheduling
+#. Resume downloading - Config->Scheduling
 #: sabnzbd/osxmenu.py, sabnzbd/sabtray.py, sabnzbd/sabtraylinux.py,
 #: sabnzbd/skintext.py
 msgid "Resume"
@@ -1729,8 +1718,7 @@ msgstr "Pause 3 timer"
 msgid "Pause for 6 hours"
 msgstr "Pause 6 timer"
 
-#. Shutdown SABnzbd
-#. Config->Scheduling
+#. Shutdown SABnzbd - Config->Scheduling
 #: sabnzbd/sabtray.py, sabnzbd/sabtraylinux.py, sabnzbd/skintext.py
 msgid "Shutdown"
 msgstr "Luk ned"
@@ -1758,9 +1746,8 @@ msgstr "Ukendt handling: %s"
 msgid "Schedule for non-existing server %s"
 msgstr "Tidsplan for ikke-eksisterende server %s"
 
-#. Queue status "download"
-#. Post processing pick list
-#. Config->RSS button "download item"
+#. Queue status "download" - Post processing pick list - Config->RSS button
+#. "download item"
 #: sabnzbd/skintext.py
 msgid "Download"
 msgstr "Downloader"
@@ -1770,14 +1757,12 @@ msgstr "Downloader"
 msgid "Join files"
 msgstr "Sammenlægger filer"
 
-#. PP Source of the NZB (path or URL)
-#. Where to find the SABnzbd sourcecode
+#. PP Source of the NZB (path or URL) - Where to find the SABnzbd sourcecode
 #: sabnzbd/skintext.py
 msgid "Source"
 msgstr "Kilde"
 
-#. PP Distribution over servers
-#. Main menu item
+#. PP Distribution over servers - Main menu item
 #: sabnzbd/skintext.py
 msgid "Servers"
 msgstr "Server"
@@ -1941,8 +1926,7 @@ msgstr "Pause jobs med kategori"
 msgid "Resume jobs with category"
 msgstr "Genoptag jobs med kategori"
 
-#. Prowl priority
-#. Three way switch for duplicates
+#. Prowl priority - Three way switch for duplicates
 #: sabnzbd/skintext.py
 msgid "Off"
 msgstr "Slået fra"
@@ -1957,14 +1941,12 @@ msgstr "Meget lav"
 msgid "Moderate"
 msgstr "Moderat"
 
-#. Prowl priority
-#. Priority pick list
+#. Prowl priority - Priority pick list
 #: sabnzbd/skintext.py
 msgid "Normal"
 msgstr "Normal"
 
-#. Prowl priority
-#. Priority pick list
+#. Prowl priority - Priority pick list
 #: sabnzbd/skintext.py
 msgid "High"
 msgstr "Høj"
@@ -1974,8 +1956,7 @@ msgstr "Høj"
 msgid "Emergency"
 msgstr "Nødsituation"
 
-#. Prowl priority
-#. Priority pick list
+#. Prowl priority - Priority pick list
 #: sabnzbd/skintext.py
 msgid "Low"
 msgstr "Lav"
@@ -2112,8 +2093,7 @@ msgstr "Totalt"
 msgid "on"
 msgstr "på"
 
-#. Config: startup parameters of SABnzbd
-#. Notification Script settings
+#. Config: startup parameters of SABnzbd - Notification Script settings
 #: sabnzbd/skintext.py
 msgid "Parameters"
 msgstr "Parameter"
@@ -2219,8 +2199,7 @@ msgstr "Hjem"
 msgid "Config"
 msgstr "Konfiguration"
 
-#. Main menu item
-#. History table header
+#. Main menu item - History table header
 #: sabnzbd/skintext.py
 msgid "Status"
 msgstr "Status"
@@ -2329,8 +2308,7 @@ msgstr "Ny version %s tilgængelig"
 msgid "Are you sure you want to shutdown SABnzbd?"
 msgstr "Er du sikker på du vil lukke SABnzbd?"
 
-#. Add NZB to queue (button)
-#. Add NZB to queue (header)
+#. Add NZB to queue (button) - Add NZB to queue (header)
 #: sabnzbd/skintext.py
 msgid "Add"
 msgstr "Tilføj"
@@ -2430,14 +2408,12 @@ msgstr "Afslut SABnzbd"
 msgid "Speed Limit"
 msgstr "Hastighedsbegrænsning"
 
-#. Queue page table column header
-#. Config->RSS table column header
+#. Queue page table column header - Config->RSS table column header
 #: sabnzbd/skintext.py
 msgid "Order"
 msgstr "Rækkefølge"
 
-#. Queue page table column header
-#. Job details page
+#. Queue page table column header - Job details page
 #: sabnzbd/skintext.py
 msgid "Name"
 msgstr "Navn"
@@ -2551,8 +2527,7 @@ msgstr "Vis mislykket"
 msgid "Show All"
 msgstr "Vis Alt"
 
-#. History table header
-#. Size of the download quota
+#. History table header - Size of the download quota
 #: sabnzbd/skintext.py
 msgid "Size"
 msgstr "Størrelse"
@@ -2653,8 +2628,7 @@ msgstr "+ Info"
 msgid "+ Debug"
 msgstr "+ Fejlfinding"
 
-#. Status page tab header
-#. Server: amount of connections
+#. Status page tab header - Server: amount of connections
 #: sabnzbd/skintext.py
 msgid "Connections"
 msgstr "Forbindelser"
@@ -2689,8 +2663,8 @@ msgstr "Fil sæt"
 msgid "When"
 msgstr "Når"
 
-#. Status page, table column header, type of message
-#. Config->RSS table column header
+#. Status page, table column header, type of message - Config->RSS table
+#. column header
 #: sabnzbd/skintext.py
 msgid "Type"
 msgstr "Type"
@@ -3792,8 +3766,7 @@ msgstr ""
 msgid "Useful if a newsserver has more than one IPv4/IPv6 address"
 msgstr "Nyttigt, hvis en newsserver har mere end én IPv4/IPv6-adresse"
 
-#. Caption
-#. Button: Add server
+#. Caption - Button: Add server
 #: sabnzbd/skintext.py
 msgid "Add Server"
 msgstr "Tilføj server"
@@ -3885,8 +3858,7 @@ msgstr "Aktivere"
 msgid "Remove Server"
 msgstr "Fjern server"
 
-#. Button: Test server
-#. Wizard step
+#. Button: Test server - Wizard step
 #: sabnzbd/skintext.py
 msgid "Test Server"
 msgstr "Testserver"
@@ -3926,8 +3898,7 @@ msgstr "Opret planlægning"
 msgid "Frequency"
 msgstr "Forekomst"
 
-#. Config->Scheduling
-#. Job details page, section header
+#. Config->Scheduling - Job details page, section header
 #: sabnzbd/skintext.py
 msgid "Action"
 msgstr "Udfør"
